点击列表汇率计算

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -9,4 +9,5 @@
     <string name="height">身高</string>
     <string name="BMI">BMI</string>
     <string name="menu_set">标题</string>
+    <string name="RMB">RMB</string>
 </resources>
