--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="height">pleast input the height(m)</string>
     <string name="BMI">your BMI is</string>
     <string name="menu_set">setting</string>
+    <string name="RMB">Input RMB</string>
 </resources>
